[gd_scene load_steps=2 format=3 uid="uid://spfhp68ent5f"]

[ext_resource type="Script" path="res://scenes/enemies/components/enemy_hitbox_component.gd" id="1_2b4ft"]

[node name="EnemyHitboxComponent" type="Area2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_2b4ft")

[node name="DamageRateTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DamageRateTimer" to="." method="_on_damage_rate_timer_timeout"]
